--- a/Mercury/Resources/Translations/pt/pt-PT.lproj/Localizable.strings
+++ b/Mercury/Resources/Translations/pt/pt-PT.lproj/Localizable.strings
@@ -5,10 +5,10 @@
 "Onboarding" = "Onboarding";
 
 /* No comment provided by engineer. */
-"First Use Date" = "Primeira Util.";
+"First Use Date" = "Primeira Útil.";
 
 /* No comment provided by engineer. */
-"Last Use Date" = "Última Util.";
+"Last Use Date" = "Última Útil.";
 
 /* No comment provided by engineer. */
 "Background" = "Fundo";
